[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "threadsafe-json-dict"
version = "0.1.1"
description = "diskcacheを使用したスレッドセーフなJSON保存機能付き辞書"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["json", "dict", "cache", "threadsafe", "persistent", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Archiving",
]
requires-python = ">=3.8"
dependencies = [
    "diskcache>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/threadsafe-json-dict"
Repository = "https://github.com/yourusername/threadsafe-json-dict"
Issues = "https://github.com/yourusername/threadsafe-json-dict/issues"
"Bug Reports" = "https://github.com/yourusername/threadsafe-json-dict/issues"
"Source" = "https://github.com/yourusername/threadsafe-json-dict"

[tool.setuptools.packages.find]
where = ["."]
include = ["threadsafe_json_dict*"]

[tool.black]
line-length = 88
target-version = ['py38']



[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 